[package]
name = "chash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
ratatui = { version = "0.26.1", features = ["all-widgets"] }
url = "2.5.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
crossterm = "0.27.0"
